--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,4 +6,14 @@ title: 'Головна'
 
 {% block content %}
 {% include "partials/_header.html" %}
+{% include "partials/_hero-slider.html" %}
+<div class="l l-main-page">
+  <div class="l-main-page__left">
+    {% include "partials/_events.html" %}
+  </div>
+  <div class="l-main-page__right">
+    {% include "partials/_news.html" %}
+  </div>
+</div>
+{% include "partials/_footer.html" %}
 {% endblock %}
