--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -3,10 +3,51 @@
   <div class="header__logo">
     <a href="/" class="main-logo main-logo_beta"></a>
   </div>
-  <a href="tel:102" class="call-patrol">
-    Викликати патруль
-    <i class="icon icon-phone"></i>
-    <span class="call-patrol__number">102</span>
-  </a>
+
+  <div class="header__right">
+    <form class="global-search" action="">
+      <input type="text" class="global-search__input" name="global_search" placeholder="Пошук">
+      <i class="global-search__icon icon icon-search"></i>
+    </form>
+
+    <div class="lang">
+      <div class="lang__item">
+        <div class="flag-ua"></div>
+        <span>укр</span>
+        <i class="icon icon-chevron-down"></i>
+      </div>
+      <ul class="lang__list">
+        <li class="lang__item">
+          <div class="flag-ua"></div>
+          <span>Укр</span>
+        </li>
+        <li class="lang__item">
+          <div class="flag-gb"></div>
+          <span>eng</span>
+        </li>
+        <li class="lang__item">
+          <div class="flag-ru"></div>
+          <span>Рус</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="header__center">
+    <a href="tel:102" class="call-patrol">
+      Викликати патруль
+      <i class="icon icon-phone"></i>
+      <span class="call-patrol__number">102</span>
+    </a>
+
+    <nav class="main-menu">
+      <a href="#" class="main-menu__link is-active">Головна</a>
+      <a href="#" class="main-menu__link">Новини</a>
+      <a href="#" class="main-menu__link">Детальна інформація</a>
+      <a href="#" class="main-menu__link">Контакти</a>
+      <a href="#" class="main-menu__link">FAQ</a>
+      <a href="#" class="main-menu__link">Online послуги</a>
+    </nav>
+  </div>
 </header>
 <!-- END header -->
