--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -1,3 +1,216 @@
 body
   +font-smoothing
+  color: $color-darkblue
 
+.out
+  overflow: hidden
+
+[class^="flag-"]
+  display: inline-block
+  width: 13px
+  height: 10px
+  background-size: cover
+  background-position: center
+
+$flags: ua, gb, ru
+@each $flag in $flags
+  .flag-#{$flag}
+    background-image: svg('#{$flag}.svg')
+
+.hero
+  margin-bottom: 85px
+  background: linear-gradient( 0deg, rgb(30,48,84) 0%, rgb(40,61,105) 100%)
+
+.title
+  +f(be, 24)
+  line-height: 1.25
+  text-transform: uppercase
+  &_lg
+    font-size: 42px
+
+.event
+  display: block
+  text-decoration: none
+  color: inherit
+  cursor: pointer
+  position: relative
+  min-height: 99px
+  box-sizing: border-box
+  padding: 14px 0 10px 112px
+  +trans(box-shadow)
+  &:hover
+    box-shadow: -5px 0 0 0 $color-yellow
+
+.list
+  margin: 20px 0
+  &:first-child
+    margin-top: 0
+  &:last-child
+    margin-bottom: 0
+
+.list__item
+  border: 1px solid $color-lightgrey
+  border-width: 0 0 1px 0
+  &:first-child
+    border-width: 1px 0
+
+.event__left
+  position: absolute
+  top: 14px
+  left: 0
+  width: 100px
+  text-align: center
+
+.event__time
+  display: block
+  font-size: 36px
+  line-height: 1
+
+.event__date
+  display: block
+  margin-top: 8px
+  color: $color-lightgrey
+  text-transform: uppercase
+  font-size: 12px
+
+.event__text
+  font-size: 14px
+  line-height: 1.57
+
+.head
+  margin-bottom: 26px
+  .dropdown
+    display: inline-block
+    vertical-align: middle
+  .title
+    display: inline-block
+    vertical-align: middle
+    margin-right: 13px
+
+.badge
+  display: inline-block
+  min-width: 78px
+  padding: 0 10px
+  height: 25px
+  line-height: 25px
+  box-sizing: border-box
+  background: #263A65 radial-gradient(circle 19px at center, rgba(98, 139, 225, 0.24) 0%, rgba(98, 139, 225, 0.15) 100%)
+  border-radius: 8px
+  font-size: 14px
+  color: white
+  text-transform: uppercase
+  text-align: center
+  .icon
+    font-size: 5px
+    position: relative
+    top: -2px
+    margin-left: 4px
+
+.dropdown
+  position: relative
+  .badge
+    cursor: pointer
+  &.is-active
+    .dropdown__list
+      visibility: visible
+      opacity: 1
+      transform: scale(1)
+
+.dropdown__list
+  visibility: hidden
+  opacity: 0
+  transform: scale(0)
+  transform-origin: left top
+  position: absolute
+  z-index: 10
+  top: 0
+  left: 0
+  width: 420px
+  box-sizing: border-box
+  padding: 30px 10px 10px 30px
+  background: #2F4677
+  border-radius: 8px
+  font-size: 14px
+  text-transform: uppercase
+  color: #BBC9E8
+  transition: all 0.3s ease
+  > li
+    display: inline-block
+    +trans(color)
+    cursor: pointer
+    margin: 0 20px 20px 0
+    &:hover
+      color: white
+
+.news
+  display: block
+  position: relative
+  text-decoration: none
+  color: inherit
+  +clr
+  &:hover
+    .news__arrow
+      opacity: 1
+      visibility: visible
+
+.news__pic
+  float: left
+  width: percentage(320/550)
+  overflow: hidden
+  box-sizing: border-box
+  img
+    display: block
+    max-width: 100%
+
+.news__content
+  box-sizing: border-box
+  padding: 30px 0 0 percentage(40/550)
+  float: right
+  width: percentage(230/550)
+
+.news__text
+  font-size: 18px
+  line-height: 1.667
+
+.news__arrow
+  margin-top: 22px
+  font-size: 14px
+  opacity: 0
+  visibility: hidden
+  +trans
+
+.align-right
+  text-align: right
+
+.btn
+  position: relative
+  display: inline-block
+  min-width: 140px
+  height: 48px
+  box-sizing: border-box
+  padding: 0 15px
+  line-height: 48px
+  text-align: center
+  background-color: $color-yellow
+  +f(l, 14)
+  text-transform: uppercase
+  color: $color-darkblue
+  text-decoration: none
+  overflow: hidden
+  &:before
+    content: ""
+    position: absolute
+    top: 0
+    left: -100%
+    width: 100%
+    height: 100%
+    background: #2F4677
+  &:hover,
+  &:focus
+    &:before
+      transition: transform 0.5s ease
+      transform: translateX(200%)
+
+.btn__text
+  position: relative
+  z-index: 1
