--- a/app/sass/partials/_header.sass
+++ b/app/sass/partials/_header.sass
@@ -2,7 +2,7 @@
   background: $color-darkblue
   color: #FFF
   box-sizing: border-box
-  padding: 9px 38px 12px
+  padding: 9px 48px 12px
   min-height: 110px
   +clr
 
@@ -10,12 +10,18 @@
   margin-right: 45px
   float: left
 
+.header__right
+  float: right
+  margin-top: 16px
+
 .call-patrol
   display: inline-block
   +f(b, 14)
+  margin-top: 13px
   text-transform: uppercase
   color: $color-yellow
   text-decoration: none
+  line-height: 1
   .icon-phone
     font-size: 22px
     color: #5F6778
@@ -50,3 +56,117 @@
       background: $color-yellow
       transform: skewX(-10deg)
       color: $color-darkblue
+
+
+.main-menu
+  font-size: 0
+  margin-top: 14px
+
+.main-menu__link
+  display: inline-block
+  color: white
+  +f(l, 14)
+  line-height: 30px
+  margin-right: 15px
+  text-transform: uppercase
+  text-decoration: none
+  position: relative
+  &:last-child
+    margin-right: 0
+  &:after
+    visibility: hidden
+    content: ""
+    position: absolute
+    top: 50%
+    margin-top: em(12,14)
+    left: 0
+    height: 3px
+    width: 100%
+    background: whitesmoke
+  &:hover
+    &:after
+      visibility: visible
+  &.is-active
+    +f(b)
+    &:after
+      visibility: visible
+
+.global-search
+  position: relative
+  display: inline-block
+  vertical-align: middle
+
+.global-search__input
+  height: 32px
+  width: 100px
+  background: none
+  box-sizing: border-box
+  padding: 0 15px 0 36px
+  border-radius: 14px
+  color: #A1A1A1
+  +f(l, 12)
+  text-transform: uppercase
+  &:focus
+    color: black
+    text-transform: none
+    background: white
+    width: 230px
+    +placeholder
+      color: #B8BDC6
+    & + .global-search__icon
+      color: #D8DDE6
+
+.global-search__icon
+  position: absolute
+  top: 50%
+  left: 12px
+  font-size: 17px
+  margin-top: -0.5em
+  pointer-events: none
+  color: white
+
+
+.lang
+  cursor: pointer
+  position: relative
+  display: inline-block
+  vertical-align: middle
+  margin-left: 16px
+  &.is-active
+    .lang__list
+      visibility: visible
+    .icon
+      visibility: hidden
+
+.lang__item
+  display: block
+  +f(l, 12)
+  text-transform: uppercase
+  line-height: 1
+  cursor: pointer
+  white-space: nowrap
+  img
+    width: 13px
+    height: 10px
+    margin-right: 4px
+  [class^="flag-"]
+    position: relative
+    margin-right: 4px
+  .icon
+    position: relative
+    vertical-align: middle
+    font-size: 4px
+    margin-left: 4px
+    top: -1px
+
+.lang__list
+  visibility: hidden
+  position: absolute
+  top: -9px
+  left: -10px
+  padding: 9px 10px
+  width: auto
+  background: #20335B
+  .lang__item
+    &:not(:first-child)
+      margin-top: 12px
