--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -3,9 +3,11 @@
 @import vars
 @import fonts
 @import generated/iconfont
+@import ../../node_modules/slick-carousel/slick/slick.scss
 @import common
 @import layouts
 @import main
 @import partials/header
 @import partials/hero-slider
 @import partials/footer
+@import partials/article
