--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -12,16 +12,14 @@
   &:after
     clear: both
 
+$colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
 .col
   float: left
   box-sizing: border-box
   width: 100%
-  &-25
-    width: 25%
-  &-50
-    width: 50%
-  &-75
-    width: 75%
+  @each $size in $colsizes
+    &-#{$size}
+      width: $size + %
 
 .l-main-page
   +clr
@@ -37,4 +35,17 @@
   margin-left: 360px
   max-width: 550px
 
+.l-news-page
+  +clr
 
+.l-news-page__left
+  float: left
+  width: 330px
+  margin-right: -330px
+  box-sizing: border-box
+  padding-right: 20px
+
+.l-news-page__right
+  float: right
+  margin-left: 350px
+  max-width: 590px
