--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -29,6 +29,7 @@
     width: 100%
     height: 100%
     background: $color-yellow
+    transform: translate3d(0, 0, 0)
   .icon
     display: block
     font-size: 22px
@@ -38,7 +39,7 @@
   &:focus
     &:after
       transition: transform 0.5s ease
-      transform: translateY(200%)
+      transform: translate3d(0, 200%, 0)
 
   &_facebook
     background: #4662A1
@@ -57,5 +58,3 @@
   display: inline-block
   vertical-align: middle
   font-size: 14px
-
-
