--- a/app/sass/partials/_hero-slider.sass
+++ b/app/sass/partials/_hero-slider.sass
@@ -1,12 +1,46 @@
 .hero-slider
   position: relative
+  z-index: 0
+  .slick-dots
+    position: absolute
+    bottom: 10px
+    left: 0
+    right: 0
+    max-width: 960px
+    padding: 0 20px
+    margin: auto
+    font-size: 0
+    pointer-events: none
+    > li
+      display: inline-block
+      margin-right: 7px
+      font-size: 0
+      line-height: 0
+      pointer-events: all
+      width: 12px
+      height: 12px
+      box-sizing: border-box
+      border: 2px solid white
+      border-radius: 50%
+      cursor: pointer
+      +trans(background)
+      button
+        display: none
+      &:hover,
+      &.slick-active
+        background: white
+
+.hero-slider__slides
+  +clr
 
 .hero-slider__nav
   position: absolute
   z-index: 1
   bottom: 34px
   left: 0
+  right: 0
   font-size: 0
+  pointer-events: none
 
 .hero-slider__prev,
 .hero-slider__next
@@ -16,6 +50,7 @@
   color: white
   font-size: 14px
   +trans(background-color)
+  pointer-events: all
   &:hover
     background-color: #20335B
 
@@ -23,17 +58,31 @@
   margin-right: 1px
 
 .hero-slide
-  min-height: 590px
+  float: left
+  height: 590px
   color: white
   position: relative
   +f(l, 18)
   line-height: 1.667
+  .l
+    position: relative
+    height: 100%
   p
     margin: 1em 0
 
   &-1
     .hero-slide__image
       right: -35px
+
+  &-2
+    .hero-slide__image
+      right: percentage(-85/960)
+      bottom: 98px
+    .hero-slide__content
+      padding-top: percentage(92/960)
+      max-width: percentage(430/960)
+    .link-more
+      margin-top: 26px
 
 .hero-slide__content
   position: relative
