--- a/app/templates/partials/_events.html
+++ b/app/templates/partials/_events.html
@@ -1,7 +1,7 @@
 <!-- BEGIN events -->
 <div class="head">
   <h3 class="title">Події</h3>
-  <div class="dropdown">
+  <div class="dropdown dropdown_lg">
     <span class="badge">Київ <i class="icon icon-chevron-down"></i></span>
     {% include "_regions-list.html" %}
   </div>
