--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -11,7 +11,7 @@
     </form>
 
     <div class="lang">
-      <div class="lang__item">
+      {# <div class="lang__item">
         <div class="flag-ua"></div>
         <span>укр</span>
         <i class="icon icon-chevron-down"></i>
@@ -29,15 +29,36 @@
           <div class="flag-ru"></div>
           <span>Рус</span>
         </li>
+      </ul> #}
+      <div class="lang__item">
+        <span>Українською</span>
+        <i class="icon icon-chevron-down"></i>
+      </div>
+      <ul class="lang__list">
+        <li class="lang__item">
+          <span>Українською</span>
+        </li>
+        <li class="lang__item">
+          <span>По-русски</span>
+        </li>
+        <li class="lang__item">
+          <span>English</span>
+        </li>
       </ul>
     </div>
   </div>
 
   <div class="header__center">
-    <a href="tel:102" class="call-patrol">
+    <a href="tel:102" class="header-call">
       Викликати патруль
       <i class="icon icon-phone"></i>
-      <span class="call-patrol__number">102</span>
+      <span class="header-call__number">102</span>
+    </a>
+
+    <a href="tel:0441112212" class="header-call">
+      Гаряча лінія
+      <i class="icon icon-phone"></i>
+      <span class="header-call__number">(044) 111-22-12</span>
     </a>
 
     <nav class="main-menu">
