--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -55,10 +55,7 @@ title: Новини
               Mauris feugiat vitae libero ac scelerisque. Maecenas rhoncus, diam scelerisque ultricies consectetur, est lectus tempus dolor, sed iaculis orci erat et tortor. Fusce quis leo eget leo ullamcorper tristique. In nec neque molestie, porttitor diam nec, suscipit augue. Duis malesuada, orci eget gravida tristique, tortor magna pretium arcu, vel bibendum velit nisi eu turpis. Nulla quis sagittis nunc. Sed convallis, mi ac pellentesque euismod, tellus lacus volutpat nibh, ut feugiat neque arcu eget arcu.
             </p>
           </article>
-          <div class="share">
-            <a href="#" class="share-btn icon icon-facebook"></a>
-            <a href="#" class="share-btn icon icon-twitter"></a>
-          </div>
+          {{mixins.share()}}
         </div>
 
       </div>
