--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -49,3 +49,16 @@ $colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
   float: right
   margin-left: 350px
   max-width: 590px
+
+.l-article
+  margin-bottom: 75px
+  +clr
+
+.l-article__aside
+  float: left
+  width: 100%
+  width: percentage(180/960)
+
+.l-article__content
+  float: right
+  width: percentage(720/960)
