--- a/app/sass/partials/_article.sass
+++ b/app/sass/partials/_article.sass
@@ -1,15 +1,48 @@
 .article
   font-style: 14px
   line-height: 1.57
-  p
+  p, ul, ol
     margin: 1em 0
-  &:first-child
-    margin-top: 0
-  &:last-child
-    margin-bottom: 0
-
+    &:first-child
+      margin-top: 0
+    &:last-child
+      margin-bottom: 0
+  img
+    max-width: 100%
+  > img
+    display: block
+    margin: 40px 0
+    &:first-child
+      margin-top: 0
+    &:last-child
+      margin-bottom: 0
+  ul
+    > li
+      &:before
+        content: "- "
 
 .article__title
   margin-bottom: 24px
   +f(l, 18)
   line-height: 1.667
+
+.article-head
+  position: relative
+  margin-bottom: 70px
+  padding-right: percentage(120/960)
+  font-size: 16px
+  line-height: 1.625
+  .title-thin
+    margin-bottom: 15px
+  .share
+    position: absolute
+    top: 0
+    right: 0
+    margin-top: 0
+
+.article-aside
+  border-top: 4px solid $color-yellow
+  padding-top: 10px
+  .title
+    margin-bottom: 7px
+
