--- a/app/templates/partials/_mixins.html
+++ b/app/templates/partials/_mixins.html
@@ -23,15 +23,18 @@
 {% macro btn(text, mod) %}
 <button type="button" class="btn{% if mod %} {{mod}}{% endif %}">
   {{text}}
-  {# <span class="btn__overlay"></span> #}
-  {# <span class="btn__text">{{text}}</span> #}
 </button>
 {% endmacro %}
 
 {% macro btnLink(text, mod, href) %}
 <a href="{% if href %}{{href}}{% else %}#{% endif %}" class="btn{% if mod %} {{mod}}{% endif %}">
   {{text}}
-  {# <span class="btn__overlay"></span> #}
-  {# <span class="btn__text">{{text}}</span> #}
 </a>
+{% endmacro %}
+
+{% macro share(mod) %}
+<div class="share{% if mod %} {{mod}}{% endif %}">
+  <a href="#" class="share-btn icon icon-facebook"></a>
+  <a href="#" class="share-btn icon icon-twitter"></a>
+</div>
 {% endmacro %}
