--- a/app/sass/helpers/_helpers.sass
+++ b/app/sass/helpers/_helpers.sass
@@ -11,11 +11,7 @@
   transition: $what $dur $easing
 
 =scroll-touch
-  -webkit-overflow-scroll: touch
-
-*
-  &.clearfix
-    +clr
+  -webkit-overflow-scrolling: touch
 
 .clearfix
   display: table
