--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -5,6 +5,7 @@ body
   height: 100%
   +font-smoothing
   color: $color-darkblue
+  min-width: 320px
 
 b, strong
   +f(b)
@@ -33,6 +34,8 @@ em, i
 .hero
   margin-bottom: 85px
   background: linear-gradient( 0deg, rgb(30,48,84) 0%, rgb(40,61,105) 100%)
+  +md
+    margin-bottom: 45px
 
 .title
   +f(be, 24)
@@ -60,6 +63,34 @@ em, i
     font-size: 18px
 
 
+.list
+  margin: 20px 0
+  &:first-child
+    margin-top: 0
+  &:last-child
+    margin-bottom: 0
+  &_main-events
+    +rmin($bp1)
+      .list__item:nth-child(6) ~ .list__item
+        display: none
+  &_main-news
+    +md
+      .news
+        min-height: 332px
+    +sm
+      .list__item
+        border: none
+      .news__pic
+        margin-left: -20px
+        margin-right: -20px
+
+.list__item
+  border: 1px solid $color-grey-border
+  border-width: 0 0 1px 0
+  &:first-child
+    border-width: 1px 0
+
+
 .event
   display: block
   text-decoration: none
@@ -72,19 +103,6 @@ em, i
   +trans(box-shadow)
   &:hover
     box-shadow: -5px 0 0 0 $color-yellow
-
-.list
-  margin: 20px 0
-  &:first-child
-    margin-top: 0
-  &:last-child
-    margin-bottom: 0
-
-.list__item
-  border: 1px solid $color-grey-border
-  border-width: 0 0 1px 0
-  &:first-child
-    border-width: 1px 0
 
 .event__left
   position: absolute
@@ -197,25 +215,30 @@ em, i
   text-decoration: none
   color: inherit
   &_horz
-    +clr
-    .news__pic
-      float: left
-      width: percentage(320/550)
-    .news__content
-      padding: 30px 0 0 percentage(40/550)
-      float: right
-      width: percentage(230/550)
+    +rmin($bp1)
+      +clr
+      .news__pic
+        float: left
+        width: percentage(320/550)
+      .news__content
+        padding: 30px 0 0 percentage(40/550)
+        float: right
+        width: percentage(230/550)
   &:hover
     .news__arrow
       opacity: 1
       visibility: visible
+      transform: none
 
 .news__pic
   overflow: hidden
   box-sizing: border-box
+  max-height: 200px
   img
     display: block
     max-width: 100%
+    min-width: 100%
+    margin: auto
 
 .news__content
   box-sizing: border-box
@@ -230,6 +253,7 @@ em, i
   font-size: 14px
   opacity: 0
   visibility: hidden
+  transform: translateX(-10px)
   +trans
 
 .align-right
@@ -257,7 +281,7 @@ em, i
     content: ""
     position: absolute
     top: 0
-    left: -100%
+    left: -101%
     width: 100%
     height: 100%
     background: #2F4677
@@ -266,7 +290,7 @@ em, i
   &:focus
     &:after
       transition: transform 0.5s ease
-      transform: translate3d(200%, 0, 0)
+      transform: translate3d(202%, 0, 0)
 
   &_md
     min-width: 180px
@@ -463,3 +487,4 @@ em, i
     text-decoration: underline
   &:hover
     color: white
+
