--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -23,6 +23,15 @@ $colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
 
 .l-main-page
   +clr
+  +r($bp2)
+    .l-main-page__left,
+    .l-main-page__right
+      float: none
+      width: auto
+      margin: 0
+      max-width: none
+    .l-main-page__right
+      margin-top: 50px
 
 .l-main-page__left
   float: left
