--- a/app/sass/helpers/_mixins.sass
+++ b/app/sass/helpers/_mixins.sass
@@ -4,10 +4,18 @@
 	@media only screen and (max-width: $width+ "px")
 		@content
 
+=rmin($width)
+  @media only screen and (min-width: $width+ "px")
+    @content
+
 // height
 =rh($height)
 	@media only screen and (max-height: $height + "px")
 		@content
+
+=rhmin($height)
+  @media only screen and (min-height: $height + "px")
+    @content
 
 =fs($sizeValue: 16)
 	font-size: $sizeValue + px
