--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -4,6 +4,10 @@
   border-spacing: 0
   width: 100%
   margin-top: 70px
+  +r($bp2)
+    display: block
+    .footer__cell
+      display: block
 
 .footer__cell
   display: table-cell
@@ -25,6 +29,7 @@
     position: absolute
     z-index: 0
     top: -100%
+    margin-top: -3px
     left: 0
     width: 100%
     height: 100%
