--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -11,25 +11,6 @@
     </form>
 
     <div class="lang">
-      {# <div class="lang__item">
-        <div class="flag-ua"></div>
-        <span>укр</span>
-        <i class="icon icon-chevron-down"></i>
-      </div>
-      <ul class="lang__list">
-        <li class="lang__item">
-          <div class="flag-ua"></div>
-          <span>Укр</span>
-        </li>
-        <li class="lang__item">
-          <div class="flag-gb"></div>
-          <span>eng</span>
-        </li>
-        <li class="lang__item">
-          <div class="flag-ru"></div>
-          <span>Рус</span>
-        </li>
-      </ul> #}
       <div class="lang__item">
         <span>Українською</span>
         <i class="icon icon-chevron-down"></i>
@@ -48,17 +29,21 @@
     </div>
   </div>
 
-  <div class="header__center">
+  <div class="header__content">
     <a href="tel:102" class="header-call">
-      Викликати патруль
-      <i class="icon icon-phone"></i>
-      <span class="header-call__number">102</span>
+      <span class="header-call__text">Викликати патруль</span>
+      <span class="header-call__number">
+        <i class="icon icon-phone"></i>
+        102
+      </span>
     </a>
 
     <a href="tel:0441112212" class="header-call">
-      Гаряча лінія
-      <i class="icon icon-phone"></i>
-      <span class="header-call__number">(044) 111-22-12</span>
+      <span class="header-call__text">Гаряча лінія</span>
+      <span class="header-call__number">
+        <i class="icon icon-phone"></i>
+        (044) 111-22-12
+      </span>
     </a>
 
     <nav class="main-menu">
