--- a/app/templates/partials/_footer.html
+++ b/app/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <!-- BEGIN footer -->
-<footer class="footer">
+<footer class="footer{% if footerMod %} {{footerMod}}{% endif %}">
   <div class="footer__cell">
     <a href="#" class="social-btn social-btn_facebook">
       <span class="social-btn__inner">
