--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -3,23 +3,25 @@
   box-sizing: content-box
   margin: auto
   padding: 0 20px
+  +sm
+    padding: 0 10px
 
-.row
-  &:before,
-  &:after
-    content: ""
-    display: table
-  &:after
-    clear: both
-
-$colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
-.col
-  float: left
-  box-sizing: border-box
-  width: 100%
-  @each $size in $colsizes
-    &-#{$size}
-      width: $size + %
+// .row
+//   &:before,
+//   &:after
+//     content: ""
+//     display: table
+//   &:after
+//     clear: both
+//
+// $colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
+// .col
+//   float: left
+//   box-sizing: border-box
+//   width: 100%
+//   @each $size in $colsizes
+//     &-#{$size}
+//       width: $size + %
 
 .l-main-page
   +clr
@@ -46,6 +48,14 @@ $colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
 
 .l-news-page
   +clr
+  +sm
+    .l-news-page__left
+      float: none
+      width: auto
+      margin: 0
+      padding: 0
+    .l-news-page__right
+      display: none
 
 .l-news-page__left
   float: left
@@ -62,11 +72,20 @@ $colsizes: 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 60, 70, 75, 80, 100
 .l-article
   margin-bottom: 75px
   +clr
+  +sm
+    margin-bottom: 60px
+    .l-article__aside
+      float: none
+      width: auto
+      margin-bottom: 20px
+    .l-article__content
+      float: none
+      width: auto
 
 .l-article__aside
   float: left
-  width: 100%
   width: percentage(180/960)
+  max-width: 180px
 
 .l-article__content
   float: right
