--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -438,12 +438,13 @@ em, i
   font-size: 0
   margin: 0 -1px -25px 0
   text-align: center
-  .news__pic
-    margin-left: 0
-    margin-right: 0
   +md
     .news-list__item
       width: 50%
+  +sm
+    .news__pic
+      margin-left: 0
+      margin-right: 0
   +xs
     .news-list__item
       display: block
