--- a/app/sass/_layouts.sass
+++ b/app/sass/_layouts.sass
@@ -63,6 +63,10 @@
   margin-right: -330px
   box-sizing: border-box
   padding-right: 20px
+  position: relative
+  overflow: hidden
+  +rmin($bp2)
+    max-height: 601px
 
 .l-news-page__right
   float: right
