--- a/app/sass/app.sass
+++ b/app/sass/app.sass
@@ -4,6 +4,8 @@
 @import fonts
 @import generated/iconfont
 @import ../../node_modules/slick-carousel/slick/slick.scss
+// @import ../../node_modules/perfect-scrollbar/src/css/main.scss
+@import lib/perfect-scrollbar
 @import common
 @import layouts
 @import main
