--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -35,7 +35,7 @@ title: Новини
 
       <div class="l-news-page">
 
-        <div class="l-news-page__left">
+        <div class="l-news-page__left" data-scroller>
           <ul class="list">
             {% for n in news %}
               <li class="list__item">
