--- a/app/templates/layouts/_layout.html
+++ b/app/templates/layouts/_layout.html
@@ -5,7 +5,7 @@
     {% include "_head.html" %}
     {# {% include "_media-tags.html" %} #}
   </head>
-  <body {% if bodyClass %} class="{{bodyClass}}"{% endif %}>
+  <body {% if bodyClass %} class="{{bodyClass}}"{% endif %} class="is-beta">
 
     <!-- BEGIN content -->
     {% if noOut %}{% block content %}{% endblock %}{% else %}
