--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -12,7 +12,7 @@ footerMod: footer_static
     <div class="l-main-page__left">
       <!-- BEGIN events -->
       <div class="head">
-        <h3 class="title">Події</h3>
+        <h3 class="title">Новини</h3>
         <div class="dropdown dropdown_lg">
           <span class="badge">Київ <i class="icon icon-chevron-down"></i></span>
           {% include "partials/_regions-list.html" %}
@@ -33,7 +33,7 @@ footerMod: footer_static
     <div class="l-main-page__right">
       <!-- BEGIN news -->
       <div class="head">
-        <h3 class="title">Новини</h3>
+        <h3 class="title">Акценти</h3>
         <div class="dropdown dropdown_lg">
           <span class="badge">Київ <i class="icon icon-chevron-down"></i></span>
           {% include "partials/_regions-list.html" %}
