--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -54,6 +54,12 @@ title: Новини
             <p>
               Mauris feugiat vitae libero ac scelerisque. Maecenas rhoncus, diam scelerisque ultricies consectetur, est lectus tempus dolor, sed iaculis orci erat et tortor. Fusce quis leo eget leo ullamcorper tristique. In nec neque molestie, porttitor diam nec, suscipit augue. Duis malesuada, orci eget gravida tristique, tortor magna pretium arcu, vel bibendum velit nisi eu turpis. Nulla quis sagittis nunc. Sed convallis, mi ac pellentesque euismod, tellus lacus volutpat nibh, ut feugiat neque arcu eget arcu.
             </p>
+            <figure>
+              <img src="http://placehold.it/600x300" alt="">
+              <figcaption> Прес-сектор патрульної поліції</figcaption>
+            </figure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nostrum modi quos pariatur perspiciatis harum molestias corporis aliquam ut, et nulla necessitatibus corrupti similique possimus facilis natus, ratione quia aspernatur?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis nostrum modi quos pariatur perspiciatis harum molestias corporis aliquam ut, et nulla necessitatibus corrupti similique possimus facilis natus, ratione quia aspernatur?</p>
           </article>
           {{mixins.share()}}
         </div>
