--- a/app/templates/partials/_mixins.html
+++ b/app/templates/partials/_mixins.html
@@ -14,7 +14,7 @@
     <img src="{{news.img}}" alt="">
   </div>
   <div class="news__content">
-    <p class="news__text">{{news.text}}</p>
+    <p class="news__text">{{news.text}} <span class="news__date">12.11.2016</span></p>
     <i class="news__arrow icon icon-arrow-right"></i>
   </div>
 </a>
