--- a/app/sass/_common.sass
+++ b/app/sass/_common.sass
@@ -73,7 +73,7 @@ em, i
 
 .title-thin
   margin-bottom: 24px
-  +f(l, 22)
+  +f(r, 22)
   line-height: 1.667
   &_sm
     font-size: 18px
@@ -270,6 +270,10 @@ em, i
 .news__text
   font-size: 18px
   line-height: 1.667
+.news__date
+  color: #999 
+  font-size: 12px 
+  margin-left: 10px 
 
 .news__arrow
   margin-top: 22px
@@ -295,7 +299,7 @@ em, i
   line-height: 48px
   text-align: center
   background-color: $color-yellow
-  +f(l, 14)
+  +f(r, 14)
   text-transform: uppercase
   color: $color-darkblue
   text-decoration: none
