--- a/app/sass/partials/_article.sass
+++ b/app/sass/partials/_article.sass
@@ -1,6 +1,14 @@
 .article
   font-style: 14px
   line-height: 1.57
+  figure
+    img
+      width: 100% 
+    figcaption
+      color: #999 
+      display: block
+      text-align: right
+      font-size: 10px 
   p, ul, ol
     margin: 1em 0
     &:first-child
@@ -29,7 +37,7 @@
 
 .article__title
   margin-bottom: 24px
-  +f(l, 18)
+  +f(r, 18)
   line-height: 1.667
 
 .article-head
