--- a/app/sass/partials/_header.sass
+++ b/app/sass/partials/_header.sass
@@ -172,7 +172,7 @@
 .main-menu__link
   display: inline-block
   color: white
-  +f(l, 14)
+  +f(r, 14)
   line-height: 30px
   margin-right: 15px
   text-transform: uppercase
@@ -218,7 +218,7 @@
   padding: 0 15px 0 36px
   border-radius: 14px
   color: #A1A1A1
-  +f(l, 12)
+  +f(r, 12)
   text-transform: uppercase
   &:focus
     color: black
@@ -254,7 +254,7 @@
 
 .lang__item
   display: block
-  +f(l, 12)
+  +f(r, 12)
   text-transform: uppercase
   line-height: 1
   cursor: pointer
