--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -10,7 +10,8 @@ noOut: true
     <div class="centered-container__inner service-msg">
       <div class="main-logo main-logo_beta"></div>
       <img src="img/svg/404.svg" alt="">
-      <h1 class="title">Ця невловима сторінка<br> оголошена в розшук</h1>
+      <!-- <h1 class="title">Ця невловима сторінка<br> оголошена в розшук</h1> -->
+      <h1>Сторінка не знайдена.</h1>
       <p>Винагорода кожному, хто сповістить,<br> де бачив її востаннє!</p>
       {{mixins.btnLink('На головну', null, '/')}}
     </div>
