--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -15,23 +15,24 @@
         </span>
       </a>
 
-      <a href="tel:0441112212" class="header-call">
+      <a href="tel:0442549488" class="header-call">
         <span class="header-call__text">Гаряча лінія</span>
         <span class="header-call__number">
           <i class="icon icon-phone"></i>
-          (044) 111-22-12
+          (044) 254-94-88
         </span>
       </a>
     </div>
 
     <div class="header__menu">
       <nav class="main-menu">
-        <a class="main-menu__link is-active" href="#">Головна</a>
+        <a class="main-menu__link" href="#">Інші контакти</a>
+        <!-- <a class="main-menu__link is-active" href="#">Головна</a>
         <a class="main-menu__link" href="#">Новини</a>
         <a class="main-menu__link" href="#">Детальна інформація</a>
         <a class="main-menu__link" href="#">Контакти</a>
-        <a class="main-menu__link" href="#">FAQ</a>
-        <a class="main-menu__link" href="#">Online послуги</a>
+        <a class="main-menu__link" href="#">Часті запитання</a>
+        <a class="main-menu__link" href="#">Online послуги</a> -->
       </nav>
 
       <div class="header__right">
