--- a/app/sass/partials/_contacts.sass
+++ b/app/sass/partials/_contacts.sass
@@ -1,6 +1,15 @@
 .contacts
 	padding-bottom: 30px 
-
+	padding-top: 30px 
+	+clr
+	&__left
+		float: left
+		width: 280px 
+	&__right
+		overflow: hidden
+		padding-left: 30px 
+		img
+			width: 100% 
 .vacancy
 	margin-bottom: 40px 
 	.vacancy__title
@@ -15,4 +24,5 @@
 			margin-right: 10px 
 			display: inline-block
 			vertical-align: middle
-			color: #ffde00 
+			color: #ffde00
+	
