--- a/app/templates/partials/_header.html
+++ b/app/templates/partials/_header.html
@@ -26,7 +26,8 @@
 
     <div class="header__menu">
       <nav class="main-menu">
-        <a class="main-menu__link" href="#">Інші контакти</a>
+        <a class="main-menu__link is-active" href="#">Головна</a>
+        <a class="main-menu__link" href="contacts.html">Інші контакти</a>
         <!-- <a class="main-menu__link is-active" href="#">Головна</a>
         <a class="main-menu__link" href="#">Новини</a>
         <a class="main-menu__link" href="#">Детальна інформація</a>
